--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,7 +34,7 @@ jobs:
           pip install -e .
 
       - name: Build documentation
-        run: mkdocs build --strict --site-dir _site
+        run: mkdocs build --site-dir _site
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
