fix: Python versions in GitHub Actions

--- a/.github/workflows/pr_coverage_check.yml
+++ b/.github/workflows/pr_coverage_check.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 'latest'
+        python-version: '3.14'
+        check-latest: true
 
     - name: Set PYTHONPATH
       run: echo "PYTHONPATH=$PWD/src" >> $GITHUB_ENV
